# semtune

./: .gitignore  README.md  pyproject.toml
docs/: system_documentation.md
resources/texts/: 01_ball_karawane.txt  02_fontane_ueberlass_es_der_zeit.txt  04_stein_sacred_emily.txt
scripts/: download_lexicons.py  run_all_test_texts.sh
src/semtune/: __main__.py  cli.py  config.py  pipeline.py
src/semtune/decision/: compose.py  events.py  matrix.py  quote.py  state.py  warp.py
src/semtune/score/: backend.py  render.py  safety.py  string_backend.py
src/semtune/semantic/: cluster.py  embed.py  features.py  lang.py  phonetic.py  recurrence.py  tokenize.py  vad.py
src/semtune/trace/: log.py
